@@ -5,12 +5,19 @@ import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpHandler;
 import com.sun.net.httpserver.HttpServer;
 import de.jensvogt.euclid.dto.eam.CreateAccessKeyResponse;
+import de.jensvogt.euclid.dto.eam.ListAccountsResponse;
+import de.jensvogt.euclid.dto.eam.ListNamespacesResponse;
+import de.jensvogt.euclid.dto.eam.ListUserGroupsResponse;
+import de.jensvogt.euclid.dto.eam.ListUserResponse;
 import de.jensvogt.euclid.dto.eam.model.AccessKey;
 import de.jensvogt.euclid.dto.eam.model.Account;
 import de.jensvogt.euclid.dto.eam.model.Namespace;
 import de.jensvogt.euclid.dto.eam.model.User;
 import de.jensvogt.euclid.dto.eam.model.UserGroup;
-import de.jensvogt.euclid.exception.EuclidAuthenticationException;
+import de.jensvogt.euclid.exception.EuclidServiceException;
+import de.jensvogt.euclid.module.ens.EuclidEns;
+import de.jensvogt.euclid.module.eqs.EuclidEqs;
+import de.jensvogt.euclid.module.esm.EuclidEsm;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 
@@ -18,6 +25,8 @@ import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
+import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicReference;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -28,7 +37,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 /**
  * Covers every {@link EuclidSession} action: routes to the right eam action with a
  * correctly-shaped request body, parses the response, surfaces non-2xx responses as
- * {@link EuclidAuthenticationException}, and sends {@code x-euclid-namespace} once a namespace
+ * {@link EuclidServiceException}, and sends {@code x-euclid-namespace} once a namespace
  * is active - mirroring euclid-cli's EamCli.cpp.
  */
 class EuclidSessionTest {
@@ -53,18 +62,20 @@ class EuclidSessionTest {
             sendResponse(exchange, 200, "{\"users\":[" + userJson("bob") + "],\"total\":1}");
         });
 
-        List<User> users = newSession().listUsers();
+        ListUserResponse response = newSession().listUsers();
+        List<User> users = response.users();
+        assertEquals(1, response.total(), "the server's total must survive rather than be dropped");
 
         assertEquals("list-users", received.get().header("x-euclid-action"));
         assertBodyContains(received.get().body(), "\"prefix\":\"\"", "\"pageSize\":10", "\"pageIndex\":0",
                 "\"sortColumn\":\"userId\"");
         assertEquals(1, users.size());
-        User user = users.get(0);
+        User user = users.getFirst();
         assertEquals("bob", user.userId());
         assertEquals("user-ern", user.ern());
         assertEquals(1, user.accountGrants().size());
         assertEquals("863459426936", user.accountGrants().get(0).accountId());
-        assertTrue(user.accountGrants().get(0).isAdmin());
+        assertTrue(user.accountGrants().getFirst().isAdmin());
     }
 
     @Test
@@ -141,6 +152,38 @@ class EuclidSessionTest {
     }
 
     @Test
+    void eqsEsmEnsInheritTheSessionsNamespace() throws Exception {
+        // Regression test: session.eqs()/.esm()/.ens() must thread the session's active
+        // namespace through to the client they build - otherwise every queue/bucket/topic
+        // created through them silently lands in the unnamed/default namespace regardless of
+        // what namespace the session was scoped to at login.
+        AtomicReference<String> eqsNamespaceHeader = new AtomicReference<>();
+        AtomicReference<String> esmNamespaceHeader = new AtomicReference<>();
+        AtomicReference<String> ensNamespaceHeader = new AtomicReference<>();
+        server = startServer(exchange -> {
+            switch (exchange.getRequestHeaders().getFirst("x-euclid-target")) {
+                case "eqs" -> eqsNamespaceHeader.set(exchange.getRequestHeaders().getFirst("x-euclid-namespace"));
+                case "esm" -> esmNamespaceHeader.set(exchange.getRequestHeaders().getFirst("x-euclid-namespace"));
+                case "ens" -> ensNamespaceHeader.set(exchange.getRequestHeaders().getFirst("x-euclid-namespace"));
+                default -> throw new IllegalStateException("unexpected target");
+            }
+            sendResponse(exchange, 200, "{}");
+        });
+
+        EuclidSession session = newSessionWithNamespace("prod");
+        EuclidEqs eqs = session.eqs();
+        EuclidEsm esm = session.esm();
+        EuclidEns ens = session.ens();
+        eqs.deleteQueue("queue-ern");
+        esm.deleteBucket("bucket-ern");
+        ens.deleteTopic("topic-ern");
+
+        assertEquals("prod", eqsNamespaceHeader.get());
+        assertEquals("prod", esmNamespaceHeader.get());
+        assertEquals("prod", ensNamespaceHeader.get());
+    }
+
+    @Test
     void createAccessKeyParsesResponse() throws Exception {
         AtomicReference<CapturedRequest> received = new AtomicReference<>();
         server = startServer(exchange -> {
@@ -153,6 +196,63 @@ class EuclidSessionTest {
         assertEquals("create-access-key", received.get().header("x-euclid-action"));
         assertEquals("AKIDEXAMPLE", response.accessKeyId());
         assertEquals("s3cr3t", response.secretAccessKey());
+    }
+
+    // The caller identity the server resolved the request to travels in a nested "metadata" object
+    // so a response DTO's own fields stay at the top level.
+    @Test
+    void createAccessKeyParsesTheResponseMetadata() throws Exception {
+        server = startServer(exchange -> {
+            capture(exchange);
+            sendResponse(exchange, 200, "{\"metadata\":{\"region\":\"eu-central-1\",\"accountId\":\"863459426936\","
+                    + "\"user\":\"alice\"},\"accessKeyId\":\"AKIDEXAMPLE\",\"secretAccessKey\":\"s3cr3t\","
+                    + "\"createdAt\":\"2026-01-01\"}");
+        });
+
+        CreateAccessKeyResponse response = newSession().createAccessKey();
+
+        assertEquals("eu-central-1", response.metadata().region());
+        assertEquals("863459426936", response.metadata().accountId());
+        assertEquals("alice", response.metadata().user());
+    }
+
+    @Test
+    void listRequestsCarrySortDirection() throws Exception {
+        Map<String, String> bodyByAction = new ConcurrentHashMap<>();
+        server = startServer(exchange -> {
+            String action = exchange.getRequestHeaders().getFirst("x-euclid-action");
+            bodyByAction.put(action, new String(exchange.getRequestBody().readAllBytes(), StandardCharsets.UTF_8));
+            sendResponse(exchange, 200, "{\"total\":0,\"accounts\":[],\"namespaces\":[],\"userGroups\":[]}");
+        });
+
+        EuclidSession session = newSession();
+        session.listAccounts("", 10, 0, "name", "desc");
+        session.listNamespaces("863459426936", "", 10, 0, "name", "desc");
+        session.listUserGroups("", 10, 0, "name", "desc");
+
+        assertBodyContains(bodyByAction.get("list-accounts"), "\"sortDirection\":\"desc\"");
+        assertBodyContains(bodyByAction.get("list-namespaces"), "\"sortDirection\":\"desc\"");
+        assertBodyContains(bodyByAction.get("list-user-groups"), "\"sortDirection\":\"desc\"");
+    }
+
+    // The overloads without a direction have to keep sending one rather than dropping the field.
+    @Test
+    void listRequestsDefaultToAscending() throws Exception {
+        Map<String, String> bodyByAction = new ConcurrentHashMap<>();
+        server = startServer(exchange -> {
+            String action = exchange.getRequestHeaders().getFirst("x-euclid-action");
+            bodyByAction.put(action, new String(exchange.getRequestBody().readAllBytes(), StandardCharsets.UTF_8));
+            sendResponse(exchange, 200, "{\"total\":0,\"accounts\":[],\"namespaces\":[],\"userGroups\":[]}");
+        });
+
+        EuclidSession session = newSession();
+        session.listAccounts();
+        session.listNamespaces("863459426936");
+        session.listUserGroups();
+
+        assertBodyContains(bodyByAction.get("list-accounts"), "\"sortDirection\":\"asc\"");
+        assertBodyContains(bodyByAction.get("list-namespaces"), "\"sortDirection\":\"asc\"");
+        assertBodyContains(bodyByAction.get("list-user-groups"), "\"sortDirection\":\"asc\"");
     }
 
     @Test
@@ -168,7 +268,7 @@ class EuclidSessionTest {
         assertEquals("list-access-keys", received.get().header("x-euclid-action"));
         assertEquals(1, keys.size());
         assertEquals("AKIDEXAMPLE", keys.get(0).accessKeyId());
-        assertTrue(keys.get(0).active());
+        assertTrue(keys.getFirst().active());
     }
 
     @Test
@@ -209,13 +309,15 @@ class EuclidSessionTest {
             sendResponse(exchange, 200, "{\"userGroups\":[" + userGroupJson("admins") + "],\"total\":1}");
         });
 
-        List<UserGroup> groups = newSession().listUserGroups();
+        ListUserGroupsResponse response = newSession().listUserGroups();
+        List<UserGroup> groups = response.userGroups();
+        assertEquals(1, response.total());
 
         assertEquals("list-user-groups", received.get().header("x-euclid-action"));
         assertBodyContains(received.get().body(), "\"prefix\":\"\"", "\"pageSize\":10", "\"pageIndex\":0",
                 "\"sortColumn\":\"userId\"");
         assertEquals(1, groups.size());
-        assertEquals("admins", groups.get(0).name());
+        assertEquals("admins", groups.getFirst().name());
     }
 
     @Test
@@ -298,7 +400,9 @@ class EuclidSessionTest {
             sendResponse(exchange, 200, "{\"accounts\":[" + accountJson("863459426936") + "],\"total\":1}");
         });
 
-        List<Account> accounts = newSession().listAccounts();
+        ListAccountsResponse response = newSession().listAccounts();
+        List<Account> accounts = response.accounts();
+        assertEquals(1, response.total());
 
         assertEquals("list-accounts", received.get().header("x-euclid-action"));
         assertBodyContains(received.get().body(), "\"prefix\":\"\"", "\"pageSize\":10", "\"pageIndex\":0",
@@ -358,7 +462,9 @@ class EuclidSessionTest {
             sendResponse(exchange, 200, "{\"namespaces\":[" + namespaceJson("prod") + "],\"total\":1}");
         });
 
-        List<Namespace> namespaces = newSession().listNamespaces("863459426936");
+        ListNamespacesResponse response = newSession().listNamespaces("863459426936");
+        List<Namespace> namespaces = response.namespaces();
+        assertEquals(1, response.total());
 
         assertEquals("list-namespaces", received.get().header("x-euclid-action"));
         assertBodyContains(received.get().body(), "\"accountId\":\"863459426936\"", "\"prefix\":\"\"",
@@ -425,24 +531,26 @@ class EuclidSessionTest {
     }
 
     @Test
-    void nonSuccessResponseThrowsEuclidAuthenticationException() throws Exception {
+    void nonSuccessResponseThrowsEuclidServiceException() throws Exception {
         server = startServer(exchange -> sendResponse(exchange, 500, "{\"error\":\"boom\"}"));
 
         EuclidSession session = newSession();
-        EuclidAuthenticationException exception =
-                assertThrows(EuclidAuthenticationException.class, () -> session.deleteUser("bob"));
+        EuclidServiceException exception =
+                assertThrows(EuclidServiceException.class, () -> session.deleteUser("bob"));
 
+        assertEquals("eam", exception.service());
+        assertEquals("delete-user", exception.action());
         assertEquals(500, exception.statusCode());
         assertTrue(exception.responseBody().contains("boom"));
     }
 
     private EuclidSession newSession() {
-        return new EuclidSession("test-token", "alice", "863459426936", "eu-central-1", null, null, "{}",
+        return new EuclidSession("test-token", "alice", "863459426936", "eu-central-1", null, null, false, "{}",
                 baseUrl(), null, null);
     }
 
     private EuclidSession newSessionWithNamespace(String namespace) {
-        return new EuclidSession("test-token", "alice", "863459426936", "eu-central-1", null, null, "{}",
+        return new EuclidSession("test-token", "alice", "863459426936", "eu-central-1", null, null, false, "{}",
                 baseUrl(), null, namespace);
     }
 
